# telega

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  build_tests.sh  telega  telega.cpp  tgsslsocket.cpp  tgsslsocket.h  tgtelegrambotapi.cpp  tgtools.cpp
include/: tghttprequestservice.h  tgtelegrambotapi.h  tgtools.h
src/: tghttprequestservice.cpp  tgtelegrambotapi.cpp  tgtools.cpp
tests/: CMakeLists.txt  tgtelegrambotapi_tests.cpp
